# uncertainty-aware-navigation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_GR.md  SECURITY.md  STATUS.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  research_task.yml
.github/workflows/: ci.yml
configs/: first_experiment.yaml  online_navigation_experiment.yaml  partial_observation_experiment.yaml
configs/showcase/: robot_research_demo.yaml
docs/: COST_FUNCTION_DESIGN.md  EXPERIMENTAL_QUESTIONS.md  RECOVERABILITY_AND_SAFETY.md  REPOSITORY_AUDIT.md  first_experiment_plan.md  methodology_notes.md
experiments/: __init__.py  run_first_experiment.py  run_online_navigation_experiment.py  run_partial_observation_experiment.py
paper/: outline.md
scripts/: __init__.py  generate_figures.py  generate_robot_showcase.py  make_demo_gif.py  make_robot_demo_gif.py  make_robot_demo_video.py  run_all.py  run_benchmarks.py  run_synthetic_demo.py
src/uanav/: __init__.py  decision_stability.py  demo.py  research_platform.py  robot_showcase.py
src/uncertainty_navigation/: __init__.py  astar.py  bayes_update.py  core.py  environment.py  evaluation.py  experiment_plots.py  exploration.py  heuristic_features.py  metrics.py  occupancy_map.py  planner.py  planning.py  replanning.py  result_summary.py  robot.py  (+6 more)
tests/: test_astar.py  test_bayes_update.py  test_belief_space_components.py  test_belief_space_online.py  test_cost.py  test_decision_stability.py  test_dynamic_and_localization.py  test_explainable_decision.py  test_first_experiment.py  test_heuristic_features.py  test_online_navigation.py  test_planning.py  test_recoverability.py  test_recoverability_edge_cases.py  test_recoverability_threshold.py  test_research_platform.py  test_result_summary.py  test_robot_showcase.py  test_run_all_modes.py  test_sensor_model.py  test_simulation.py  test_synthetic_demo.py
tools/: summarize_results.py
(+21 files in other folders)
