[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty-aware-navigation"
version = "0.1.0"
description = "Risk-aware mobile robot navigation under map uncertainty"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Panagiota Grosdouli" }
]
keywords = [
    "mobile robotics",
    "path planning",
    "map uncertainty",
    "risk-aware planning",
    "occupancy grids"
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "setuptools>=68"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-p", "no:launch_testing"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
